[package]
name = "findcar"
version = "0.0.3"
edition = "2021"
description = "An extensible CLI tool that filters, sorts, and aggregates search results from car websites. Because of course you want to search for cars from the command line."
license = "MIT"
keywords = ["car", "aggregation", "search", "engine", "motoring"]
exclude = [".github/", ".gitignore"]
repository = "https://github.com/hgrsd/findcar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
async-trait = "0.1.58"
clap = { version = "4.0.18", features = ["derive"] }
csv = "1.1.6"
futures = "0.3.25"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
